# SharedMat

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/common/: common.hpp
example/receiver/: CMakeLists.txt  receiver.cpp
example/receiverObj/: CMakeLists.txt  receiver.cpp
example/sender/: CMakeLists.txt  sender.cpp
example/senderObj/: CMakeLists.txt  sender.cpp
example/shared_capture/: CMakeLists.txt  shared_capture.cpp
lib/: CMakeLists.txt
lib/include/SharedCvMat/: Header.hpp  SharedCapture.hpp  SharedReceiver.hpp  SharedSender.hpp  Types.hpp
lib/src/: SharedCapture.cpp  SharedReceiver.cpp  SharedSender.cpp  Utils.cpp  Utils.hpp
